<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tbbnj.app.thebenefitbureau.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimary">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/lightGrey">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/input_name"
                android:hint="@string/yourname"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@color/white"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/input_company"
                android:hint="@string/company"
                android:inputType="text"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@color/white"
                android:singleLine="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnLogin"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@color/darkYellow"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/icon"
        android:id="@+id/imageView"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"/>

</FrameLayout>
